fix: apply required spacing and styles to homepage banners

--- a/Childrens-Social-Care-CPD/wwwroot/css/application.css
+++ b/Childrens-Social-Care-CPD/wwwroot/css/application.css
@@ -10155,7 +10155,7 @@ a.dfe-header__link--service:focus {
 
 /* HOMEPAGE HERO BANNER ----------------------- */
 .app-section-beta {
-  padding: 30px 0;
+  padding: 40px 0 20px 0;
 }
 
 .app-section-beta__blue {
@@ -10166,6 +10166,10 @@ a.dfe-header__link--service:focus {
   color: white;
 }
 
+h1.body-header-font {
+  margin-bottom: 0;
+}
+
 /* DFE HEADER - CODE FROM DFE DESIGN GUIDE AND WITH EDITS --------------------------------------------------------- */
 .govuk-header {
   background-color: #003a69;
@@ -10173,7 +10177,7 @@ a.dfe-header__link--service:focus {
 
 h1,
 .dfe-heading-xl, .govuk-heading-xl {
-  margin-bottom: 10px !important;
+  margin-bottom: 10px;
 }
 
 .govuk-header__container {
@@ -10968,6 +10972,10 @@ p#content-banner-subtitle.govuk-body-l {
 .beta-banner .govuk-tag {
   color: #fff;
   background-color: #1D70B8;
+}
+
+.beta-banner-home {
+  border-bottom: 0;
 }
 
 /*
